# bazooka-bot

./: .env  .gitignore  Cargo.toml  README.md  Shuttle.toml  deny.toml  example.env
.github/workflows/: general.yml  shuttle.yml
.sqlx/: query-2c2b2e7ab1850b7c4bf786be23c54398267a395e700f4af69d5f396e208f07d5.json  query-e90e3ce260832f87b0bb551979a0fc9113d034f4b7cb785e33576d3cbef0e01e.json  query-f79d485f20e22f0b3abf69d0f8bdf6e566cd81c6270a1d51988c19a4b205bdc7.json
migrations/: 20250114063231_kv_store.sql
scripts/: init_db.sh
src/: commands.rs  config.rs  data.rs  db.rs  heartbeat.rs  lib.rs  main.rs  migration.rs  model.rs  secrets.rs
src/commands/: general.rs  schedule.rs  unranked.rs  unranked_cmd.rs
src/commands/unranked/: idea.rs
src/commands/unranked_cmd/: idea.rs  score.rs
src/data/: unranked.rs
src/data/unranked/: protected_ops.rs
src/model/: one_based_id.rs  schedule.rs  unranked.rs  user_serde.rs
src/model/schedule/: protected_ops.rs
src/model/unranked/: ideas.rs  protected_ops.rs  scores.rs
src/model/unranked/ideas/: migration.rs  protected_ops.rs
src/model/unranked/scores/: protected_ops.rs
src/unranked/: score.rs
