[package]
name = "bazooka-bot"
version = "0.6.3"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.99"
human-time = "0.1.6"
poise = "0.6.1"
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
shuttle-runtime = { version = "0.56.0", default-features = false }
shuttle-serenity = "0.56.0" # Since poise is a serenity command framework, it can run on Shuttle with shuttle-serenity
shuttle-shared-db = { version = "0.56.0", default-features = false, features = ["sqlx", "postgres"] }
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
version = "3.0.0"

[dev-dependencies]
rstest = "0.26.1"
