[package]
name = "bazooka-bot"
version = "0.6.7"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.57", features = ["derive", "env", "wrap_help"] }
human-time = "0.1.6"
loadenv = "0.1.4"
poise = "0.6.1"
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.49.0", default-features = false, features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
version = "3.0.0"

[dev-dependencies]
rstest = "0.26.1"
