[package]
name = "bazooka-bot"
version = "0.7.1"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.57", features = ["derive", "env", "wrap_help"] }
human-time = "0.1.7"
loadenv = "0.1.4"
poise = "0.6.1"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", default-features = false, features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
version = "3.0.0"

[dev-dependencies]
rstest = "0.26.1"
